    - Do not require --scriptsdir for proper operation.  (Closes: #855038)
    - Make install_over_symlink tests fail by default, add
      --warn-on-install-over-symlink option to demote this to a warning.
    - Add --install-suggests option.
    - Fall back to generating the reference chroot state on-the-fly if the
      --end-meta file is missing.
    - Make logged command lines shell-safe with pipes.quote().
  * piuparts.conf:
    - Use --warn-on-install-over-symlink for tests ending before stretch.
    - Enable scripts-log-alternatives for [sid] and [stretch].  (See: #850917)
    - Add new suite: wheezy222testing, upgrading wheezy -> jessie -> stretch.
  * piuparts.conf.anbe: Add some more example sections.
  * piuparts-slave.py:
    - Replace literal ESC (0x1b) chars with string '[ESC]' for easier
      copy+paste from logfiles.
    - Make logged command lines shell-safe with pipes.quote().
  * piuparts-analyze.py:
    - Also process untestable/*.log.
  * instances/*: Generate the config files piuparts.conf.pejacevic,
    piuparts.conf.piu-slave-bm-a, piuparts.conf.piu-slave-ubc-01 (new) and
    piuparts.conf.piu-slave-1und1-01 (unused) from a common template to keep
    the settings in sync, since they should only differ in mirror and arch.
  * Clean up leftover /etc/piuparts/scripts/post_setup_experimental.
    (Closes: #854317)
  * scripts/post_setup_minimize:
    - Exclude gcc-4.8-base from jessie chroot.
  * scripts/pre_install_database-server: Add/fix some database requirements.
  * scripts/pre_distupgrade_zz_database-server: Switch from mysql-server to
    default-mysql-server (aka mariadb-server) for selected packages on
    upgrades to stretch, otherwise they will lose their database server.
    Try 'dpkg --configure --pending' after failed upgrades in case the
    database server was started too late - after a client tried to access it.
  * scripts/pre_remove_40_find_missing_md5sums: Correctly escape backslashes
    in filenames.